--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "devDependencies": {
     "jest-expo": "23.0.0",
+    "ramda": "^0.25.0",
     "react-native-elements": "^0.19.0",
     "react-native-scripts": "1.8.1",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.26",
-    "react-test-renderer": "16.0.0"
+    "react-redux": "^5.0.6",
+    "react-test-renderer": "16.0.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
+    "redux-observable": "^0.17.0",
+    "reselect": "^3.0.1",
+    "rxjs": "^5.5.6"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
